# rust-sthash

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: benchmark.rs
src/: lib.rs  nh.rs  nhpoly1305.rs  poly1305.rs  sthash.rs  test.rs
src/nhpoly1305/: avx2.rs  mod.rs  portable.rs
src/nhpoly1305/nh/: avx2.rs  mod.rs  portable.rs
