[package]
name = "sthash"
version = "0.2.15"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "A very fast cryptographic hash function for large data."
keywords = ["crypto", "cryptography", "hash"]
categories = ["algorithms", "cryptography"]
readme = "README.md"
license = "ISC"
repository = "https://github.com/jedisct1/rust-sthash"

[dependencies]
byteorder = "1.5.0"
tiny-keccak = { version = "2.0.2", features = ["cshake", "kmac"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
blake2b_simd = "1.0.2"
blake3 = "1.5.1"
rand = "0.8.5"
sha2 = "0.10.8"
hmac = "0.12.1"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true
panic = "abort"
opt-level = 3
overflow-checks = false
codegen-units = 1
incremental = false
